<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_connection_header">

        <EditTextPreference
            app:key="service_url"
            app:title="@string/settings_connection_service_url"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_accessibility_header">
        <ListPreference
            app:defaultValue="normal"
            app:entries="@array/settings_accessibility_speech_rate_entries"
            app:entryValues="@array/settings_accessibility_speech_rate_values"
            app:key="speech_rate"
            app:title="@string/settings_accessibility_speech_rate"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="default"
            app:entries="@array/settings_accessibility_locale_entries"
            app:entryValues="@array/settings_accessibility_locale_values"
            app:key="locale"
            app:title="@string/settings_accessibility_locale"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="visual_feedback"
            android:title="@string/settings_accessibility_visual_feedback" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="visual_feedback"
            android:key="visual_feedback_colors"
            android:title="@string/settings_accessibility_visual_feedback_colors" />
    </PreferenceCategory>
</PreferenceScreen>
